# input

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: FindGDK.cmake  FindGLFW.cmake  FindSDL2.cmake  FindSDL3.cmake
doc/: Input_banner.psd
inc/Input/: Gamepad.hpp  Input.hpp  Keyboard.hpp  Mouse.hpp
inc/input/: Touch.hpp
samples/: CMakeLists.txt
samples/GDK/: CMakeLists.txt  main.cpp
samples/GLFW/: CMakeLists.txt  main.cpp
samples/GLFW/glad/: gl.h
samples/SDL2/: CMakeLists.txt  main.cpp
samples/SDL3/: CMakeLists.txt  main.cpp
samples/Win32/: CMakeLists.txt  main.cpp
samples/assets/: ANSI_Keyboard_Layout_Diagram_with_Form_Factor.txt  Xbox Controller.ai
samples/input/: CMakeLists.txt  input_test.cpp  input_test.hpp
src/: Gamepad.cpp  Input.cpp  Keyboard.cpp  Mouse.cpp  Touch.cpp
src/GDK/: GamepadGDK.cpp  KeyboardGDK.cpp
src/backends/GDK/: GamepadGDK.cpp  InputGDK.cpp  InputGDK.hpp  KeyboardGDK.cpp  MouseGDK.cpp  TouchGDK.cpp
src/backends/GLFW/: GamepadGLFW.cpp  KeyboardGLFW.cpp  MouseGLFW.cpp  TouchGLFW.cpp
src/backends/SDL2/: GamepadSDL2.cpp  KeyboardSDL2.cpp  MouseSDL2.cpp  TouchSDL2.cpp
src/backends/SDL3/: GamepadSDL3.cpp  KeyboardSDL3.cpp  MouseSDL3.cpp  TouchSDL3.cpp
src/backends/Win32/: GamepadWin32.cpp  KeyboardWin32.cpp  MouseWin32.cpp  TouchWin32.cpp
